dnl Template file for GNU Autoconf
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright (C) 1995, 1996, 1997 Free Software Foundation, Inc.
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

dnl
dnl $Id: configure.in,v 1.8 1999/12/20 09:03:50 andrew Exp $
dnl


AC_REVISION($Revision: 1.8 $)

AC_INIT(COPYING)
AM_INIT_AUTOMAKE(cronolog, 1.6.2)	dnl  PACKAGE and VERSION initialized here!!
AC_ARG_PROGRAM


dnl Checks for programs.

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

AC_PATH_PROG(PERL, perl, /usr/local/bin/perl, /usr/bin:/usr/local/bin:/opt/bin:/usr/contrib/bin)


dnl Checks for libraries.

dnl Checks for header files.

AC_HEADER_STDC
AC_HEADER_STAT
AC_HEADER_TIME
AC_STRUCT_TM
AC_STRUCT_TIMEZONE
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.

AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir mktime putenv)
AC_REPLACE_FUNCS(strptime localtime_r)

AC_OUTPUT(Makefile lib/Makefile src/Makefile doc/Makefile testsuite/Makefile src/cronosplit)
